4.1.55
- The generated ICS files will have correct daylight saving time set
- Fixed saving of tasks recurrence to "no recurrence" value
- Order Dialog in billing is now modal
- Order Model will check for recurring Orders before Delete
- Recurred Order without an order_id can no longer be deleted
- Adding an Order status to an order book will no longer throw an Notice exception

05-04-2013 4.1.54
- Sort order wrong for resources in event dialog
- Holidays were listed at the bottom in calendar list view
- Updated Swedish

02-04-2013 4.1.53
- $config['allow_profile_edit']=false; flag works again
- Small Z-Push 2 beta fixes
- Update Norwegian translation
- Bug in displaying custom fields
- Show all links button not shown when it's not needed
- Hours approval: week disapproving works again.
- Calendar: admin can set event reminders in his own calendar.

29-03-2013 4.1.52
- Fixed multiple bugs in the Z-Push 2 beta implementation
- Calendar group view print fixed
- Added "Show all" link to 15 latest links displayed for all items.
- Added pagination toolbar to search results that doesn't know the total of 
  results to keep performance optimal.
- Holidays could be generated on the wrong day
- Appointment invitations could have a confusing "Update event" link.
- redirect email filters had an input for multiple addresses but this is not supported by sieve
- Some messages were not displayed because they had body tags in the middle of an html message
- Show timeout error instead of JsonStore load exception
- GO will recognize IE10 as Internet Explorer browser isInternetExplorer() will return true
- Download filenames with UTF-8 character in IE10 will work as expected
- Reset password was broken
- removed time before tasks and birthday events in the calendar's month view
- Cron: enabling the users and group tabs when clicking on apply will now work.
- Changed labels on the button to add an email address to a new or existing contact in the addressbook